# cloud_drive

./: .gitignore  Cargo.toml  LICENSE-COMMERCIAL.md  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/common/: DropdownMenu.less  DropdownMenu.tsx  Icons.tsx  Modal.less  Modal.tsx
frontend/src/components/dashboard/: ActionToolbar.less  ActionToolbar.tsx  Breadcrumbs.less  Breadcrumbs.tsx  (+16 more)
frontend/src/context/: AuthContext.tsx  ProgressContext.tsx  ToastContext.tsx
frontend/src/hooks/: useDashboardModals.ts  useFileDragDrop.ts  useFileFilter.ts  useFileOperations.ts  useSelection.ts  useThumbnail.ts
frontend/src/lib/: react-query.ts
frontend/src/pages/: Auth.less  Dashboard.less  Dashboard.tsx  Login.tsx  SignUp.tsx
frontend/src/services/: api.ts
frontend/src/theme/: colors.less  colors.ts
frontend/src/types/: auth.ts  common.ts  files.ts  index.ts
frontend/src/utils/: fileUtils.ts  format.ts
src/: config.rs  constants.rs  db.rs  db_indexes.rs  error.rs  lib.rs  main.rs
src/entities/: file.rs  file_permission.rs  mod.rs  user.rs
src/handlers/: auth.rs  mod.rs  storage.rs  user.rs
src/handlers/file/: download.rs  helpers.rs  mod.rs  operations.rs  permission.rs  upload.rs
src/middleware/: auth.rs
src/models/: auth.rs  file.rs
src/routes/: app.rs  mod.rs
src/services/: batch_download.rs  deduplication.rs  download.rs  mod.rs
src/utils/: archive.rs  file_utils.rs  jwt.rs  mod.rs  password.rs  request_id.rs  response.rs
(+23 files in other folders)
