[package]
name = "cloud_drive"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# UUID for request IDs
uuid = { version = "1.0", features = ["v4", "fast-rng"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database ORM
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

# JWT authentication
jsonwebtoken = "9"

# Password hashing
bcrypt = "0.15"

# Time processing
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"

# Environment variables
dotenvy = "0.15"

# ZIP compression (streaming support)
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# System information
sysinfo = "0.32"

# URL encoding
percent-encoding = "2.3"
